<resources>
    <string name="app_name">Sporties</string>
    <string name="signUpButton">Not Registered? Sign Up</string>
    <string name="forgetPasswordDescription">Please enter your email id below to \n receive password reset link.</string>
    <string name="samsungHealth">Health Records</string>
    <string name="dashboard">Dashboard</string>


    <!-- Activity Labels -->
    <string name="signUpActivity">Sign up</string>
    <string name="forgetPasswordActivity">Forget Password</string>
    <string name="changePasswordActivity">Change Password</string>
    <string name="createTeam">Create Team</string>

    <!-- All Edit text hints -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="teamName">Team Name</string>
    <string name="sport">Sport</string>
    <string name="ageGroup">Age Group</string>
    <string name="location">Location</string>
    <string name="login">Login</string>
    <string name="gender">Gender</string>
    <string name="emailNotification">Email Notification</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="changePassword">Change Password</string>
    <string name="pass">******</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="updatePasswordButton">Update</string>
    <string name="userName">User Name</string>
    <string name="search">Search</string>
    <string name="changeName">Change Name</string>
    <string name="save">Save</string>
    <string name="changeEmail">Change Email</string>
    <string name="changePhone">Change Phone</string>
    <string name="changeGender">Change Gender</string>
    <string name="changeHeightWeight">Change Height and Weight</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="dob">Date of birth</string>
    <string name="changeWeight">Change Weight</string>
    <string name="changeHeight">Change Height</string>
    <string name="changeDob">Change Date of Birth</string>
    <string name="addres">Address</string>
    <string name="bio">Bio</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="editTeam">Save Details</string>
    <string name="fingerprintUnlock">Fingerprint Unlock</string>
    <string name="fingerprintDetails">Confirm fingerprint to continue.</string>
    <string name="touchSensor">Touch Sensor</string>
    <string name="logout">Logout</string>
    <string name="addToTeam">Add Player</string>
    <string name="profile">View profile</string>
    <string name="deleteProfile">Remove from team</string>

    <string name="eventOptionView">View event</string>
    <string name="eventOptionMap">View in map</string>
    <string name="eventOptionEdit">Edit event</string>
    <string name="eventOptionDelete">Delete event</string>
    <string name="teamOptionDelete">Terminate team</string>
    <string name="changeAddress">Change Address</string>
    <string name="changeBio">Change Bio</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Option Menu items-->
    <string name="profileSettings">Profile Settings</string>
    <string name="healthData">Health Records</string>
    <string name="signout">Sign out</string>
    <string name="refresh">Refresh</string>
    <string name="healthConnect">Connect to Samsung Health</string>
    <string name="fingerprint">Fingerprint Login</string>
    <string name="fingerprintTitle">Fingerprint Authentication</string>
    <string name="fingerprintDefaultStatus">You have not assigned fingerprint to Sporites. Please touch your fingerprint sensor for assign fingerprint to Sporties.</string>

    <string-array name="ageList">
        <item>Select Age Group</item>
        <item>Under 13</item>
        <item>13 - 18</item>
        <item>18+</item>
    </string-array>

    <string-array name="genderList">
        <item>Select Gender</item>
        <item>Female</item>
        <item>Male</item>
        <item>Co Ed</item>
    </string-array>

    <string-array name="eventType">
        <item>Event Type</item>
        <item>Game</item>
        <item>Tournament</item>
        <item>Training</item>
        <item>Meeting</item>
    </string-array>

    <string-array name="recurringSpinner">
        <item>Recurring Event</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>


    <string name="signUp">Sign Up</string>


    <!--Samsung SDK Help Strings-->
    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree with Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <string-array name="sports">
        <item>Sports</item>
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Chess</item>
        <item>Cricket</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Gymnastics</item>
        <item>Hockey(Field)</item>
        <item>Hockey(Ice)</item>
        <item>Polo</item>
        <item>Water Polo</item>
        <item>Soccer</item>
        <item>Sailing</item>
        <item>Tennis</item>
        <item>Rugby</item>
        <item>Volleyball</item>
        <item>Wrestling</item>
    </string-array>


    <!--Validation Strings-->
    <string name="firstNameError">Enter valid first name</string>
    <string name="lastNameError">Enter valid last name</string>
    <string name="emailError">Enter valid email</string>
    <string name="phoneError">Enter valid phone number</string>
    <string name="passwordError">Enter valid password</string>
    <string name="passwordConfirmError">Both password must be same</string>
</resources>
