<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:padding="10dp"
    android:elevation="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/fingerprintUnlock"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/fingerprintDetails"
        android:padding="10dp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/fingerprint"
                android:contentDescription="@string/fingerprint"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touchSensor"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/dialogFingerPrintLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_gravity="right"
        android:padding="10dp"
        android:background="@drawable/button_design"
        android:textColor="@color/colorText"
        android:layout_margin="10dp"
        />
</LinearLayout>