<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_vertical|center_horizontal"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.example.yash007.sportsapplication.ChangePasswordActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldPassword"
        android:hint="@string/oldPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:inputType="textPassword"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPassword"
        android:hint="@string/newPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPass"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/updatePasswordButton"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:onClick="doUpdatePassword"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"/>


</LinearLayout>
