<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:windowSoftInputMode="adjustPan"
    tools:context="com.example.yash007.sportsapplication.SignupActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical|center_horizontal">

        <TableRow
            android:layout_margin="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/theme_user"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:textColor="@color/colorText"
                android:theme="@style/editText" />


        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/theme_user"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:textColor="@color/colorText"
                android:theme="@style/editText" />

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/theme_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText"
                android:theme="@style/editText" />

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/theme_phone"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/colorText"
                android:theme="@style/editText" />

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/theme_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:theme="@style/editText" />

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/theme_password"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:theme="@style/editText" />

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:weightSum="10">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:drawableLeft="@drawable/theme_unlock"
                android:onClick="doSignUp"
                android:text="@string/signUp"
                android:theme="@style/button" />
        </TableRow>
    </TableLayout>
</ScrollView>
